# woodpecker-rs

./: Cargo.toml  data.csv  mail.txt
src/: main.rs
