[package]
name = "woodpecker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
lettre = { version = "0.11.17", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
